; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-spawn.c_init_process_options.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-spawn.c_init_process_options.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i8**, i64, i32 }

@exepath = common dso_local global i8* null, align 8
@exepath_size = common dso_local global i64 0, align 8
@args = common dso_local global i8** null, align 8
@options = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @init_process_options to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_process_options(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** @exepath, align 8
  %7 = call i32 @uv_exepath(i8* %6, i64* @exepath_size)
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp eq i32 %8, 0
  %10 = zext i1 %9 to i32
  %11 = call i32 @ASSERT(i32 %10)
  %12 = load i8*, i8** @exepath, align 8
  %13 = load i64, i64* @exepath_size, align 8
  %14 = getelementptr inbounds i8, i8* %12, i64 %13
  store i8 0, i8* %14, align 1
  %15 = load i8*, i8** @exepath, align 8
  %16 = load i8**, i8*** @args, align 8
  %17 = getelementptr inbounds i8*, i8** %16, i64 0
  store i8* %15, i8** %17, align 8
  %18 = load i8*, i8** %3, align 8
  %19 = load i8**, i8*** @args, align 8
  %20 = getelementptr inbounds i8*, i8** %19, i64 1
  store i8* %18, i8** %20, align 8
  %21 = load i8**, i8*** @args, align 8
  %22 = getelementptr inbounds i8*, i8** %21, i64 2
  store i8* null, i8** %22, align 8
  %23 = load i8**, i8*** @args, align 8
  %24 = getelementptr inbounds i8*, i8** %23, i64 3
  store i8* null, i8** %24, align 8
  %25 = load i8**, i8*** @args, align 8
  %26 = getelementptr inbounds i8*, i8** %25, i64 4
  store i8* null, i8** %26, align 8
  %27 = load i8*, i8** @exepath, align 8
  store i8* %27, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @options, i32 0, i32 0), align 8
  %28 = load i8**, i8*** @args, align 8
  store i8** %28, i8*** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @options, i32 0, i32 1), align 8
  %29 = load i32, i32* %4, align 4
  store i32 %29, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @options, i32 0, i32 3), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @options, i32 0, i32 2), align 8
  ret void
}

declare dso_local i32 @uv_exepath(i8*, i64*) #1

declare dso_local i32 @ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
